--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
         </div>
     </section>
 
-    <!-- Resume Section -->
+    <!-- Resume Section
     <section id="resume">
         <div class="container">
             <h2 class="section-title">Resume</h2>
@@ -164,8 +164,24 @@
                     href="https://drive.google.com/file/d/1L1wzxDdw63ikYNVvlOrrOWnI-Hbm_NXD/view?usp=drive_link"
                     target="_blank" download>Download Resume</a>
             </div>
+        </div> -->
+
+
+    <section id="resume">
+        <div class="container">
+            <h2 class="section-title">Resume</h2>
+            <div class="resume-buttons">
+                <a class="resume-button" id="resume-button-1"
+                    href="https://drive.google.com/uc?export=download&id=1L1wzxDdw63ikYNVvlOrrOWnI-Hbm_NXD">Download
+                    Resume</a>
+            </div>
         </div>
     </section>
+    </section>
+
+
+
+
 
 
     <!-- JavaScript -->
