--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
             <li><a href="#projects" class="nav-link projects">Projects</a></li>
             <li><a href="#contact" class="nav-link contact">Contact</a></li>
             <li><a class="nav-link resume"
-                    href="https://drive.google.com/uc?id=1GSBfYILjPHQPw90A-Sg6PL3yvTgXdhhH&export=download"
-                    target="_blank" download>Resume</a></li>
+                    href="https://drive.google.com/uc?export=download&id=1L1wzxDdw63ikYNVvlOrrOWnI-Hbm_NXD"
+                    id="resume-button-2">Resume</a></li>
         </ul>
     </nav>
 
@@ -155,17 +155,6 @@
         </div>
     </section>
 
-    <!-- Resume Section
-    <section id="resume">
-        <div class="container">
-            <h2 class="section-title">Resume</h2>
-            <div class="resume-buttons">
-                <a class="resume-button" id="resume-button-1"
-                    href="https://drive.google.com/file/d/1L1wzxDdw63ikYNVvlOrrOWnI-Hbm_NXD/view?usp=drive_link"
-                    target="_blank" download>Download Resume</a>
-            </div>
-        </div> -->
-
 
     <section id="resume">
         <div class="container">
@@ -178,6 +167,32 @@
         </div>
     </section>
     </section>
+
+
+
+
+
+    <div>
+        <div class="container">
+            <a  class="react-activity-calendar" href="https://git.io/streak-stats">
+                <img id="github-streak-stats"
+                    src="https://github-readme-streak-stats.herokuapp.com/?user=abhipathak1&theme=highcontrast&border_radius=5"
+                    alt="GitHub Streak Stats" />
+            </a>
+            <a  id="github-top-langs" href="https://github.com/abhipathak1/github-readme-stats">
+                <img id="github-top-langs"
+                    src="https://github-readme-stats.vercel.app/api/top-langs/?username=abhipathak1"
+                    alt="GitHub Top Langs" />
+            </a>
+            <a  id="github-stats-card"  href="https://github.com/abhipathak1/github-readme-stats">
+                <img id="github-stats-card" src="https://github-readme-stats.vercel.app/api?username=abhipathak1"
+                    alt="GitHub Stats Card" />
+            </a>
+        </div>
+
+    </div>
+
+
 
 
 
