--- a/index.html
+++ b/index.html
@@ -17,11 +17,14 @@
             <li><a href="#skills" class="nav-link skills">Skills</a></li>
             <li><a href="#projects" class="nav-link projects">Projects</a></li>
             <li><a href="#contact" class="nav-link contact">Contact</a></li>
-            <li><a class="nav-link resume"
+            <li>
+                <a class="nav-link resume"
                     href="https://drive.google.com/uc?export=download&id=1L1wzxDdw63ikYNVvlOrrOWnI-Hbm_NXD"
-                    id="resume-button-2">Resume</a></li>
+                    id="resume-button-2">Resume</a>
+            </li>
         </ul>
     </nav>
+
 
     <!-- Home Section -->
     <section id="home">
@@ -174,17 +177,17 @@
 
     <div>
         <div class="container">
-            <a  class="react-activity-calendar" href="https://git.io/streak-stats">
+            <a class="react-activity-calendar" href="https://git.io/streak-stats">
                 <img id="github-streak-stats"
                     src="https://github-readme-streak-stats.herokuapp.com/?user=abhipathak1&theme=highcontrast&border_radius=5"
                     alt="GitHub Streak Stats" />
             </a>
-            <a  id="github-top-langs" href="https://github.com/abhipathak1/github-readme-stats">
+            <a id="github-top-langs" href="https://github.com/abhipathak1/github-readme-stats">
                 <img id="github-top-langs"
                     src="https://github-readme-stats.vercel.app/api/top-langs/?username=abhipathak1"
                     alt="GitHub Top Langs" />
             </a>
-            <a  id="github-stats-card"  href="https://github.com/abhipathak1/github-readme-stats">
+            <a id="github-stats-card" href="https://github.com/abhipathak1/github-readme-stats">
                 <img id="github-stats-card" src="https://github-readme-stats.vercel.app/api?username=abhipathak1"
                     alt="GitHub Stats Card" />
             </a>
