--- a/index.html
+++ b/index.html
@@ -33,6 +33,9 @@
                 <img src="WhatsApp Image 2023-04-04 at 16.10.25.jpg" alt="Professional Photo" class="home-img">
                 <h1 id="user-detail-name">Abhay Pathak</h1>
                 <p id="user-detail-intro">Java Backend Developer</p>
+                <a class="nav-link resume"
+                    href="https://drive.google.com/uc?export=download&id=1L1wzxDdw63ikYNVvlOrrOWnI-Hbm_NXD"
+                    id="resume-button-2">Resume</a>
             </div>
         </div>
     </section>
