--- a/index.html
+++ b/index.html
@@ -185,18 +185,30 @@
                     src="https://github-readme-streak-stats.herokuapp.com/?user=abhipathak1&theme=highcontrast&border_radius=5"
                     alt="GitHub Streak Stats" />
             </a>
-            <a id="github-top-langs" href="https://github.com/abhipathak1/github-readme-stats">
+        </div>
+    </div>
+
+
+    <div>
+        <div class="container">
+            <a class="react-activity-calendar" href="https://github.com/abhipathak1/github-readme-stats">
                 <img id="github-top-langs"
                     src="https://github-readme-stats.vercel.app/api/top-langs/?username=abhipathak1"
                     alt="GitHub Top Langs" />
             </a>
-            <a id="github-stats-card" href="https://github.com/abhipathak1/github-readme-stats">
+        </div>
+    </div>
+
+    <div>
+        <div class="container">
+            <a  class="react-activity-calendar" href="https://github.com/abhipathak1/github-readme-stats">
                 <img id="github-stats-card" src="https://github-readme-stats.vercel.app/api?username=abhipathak1"
                     alt="GitHub Stats Card" />
             </a>
         </div>
-
     </div>
+
+
 
 
 
