--- a/index.html
+++ b/index.html
@@ -32,13 +32,13 @@
             <div class="profile">
                 <img src="WhatsApp Image 2023-04-04 at 16.10.25.jpg" alt="Professional Photo" class="home-img">
                 <h1 id="user-detail-name">Abhay Pathak</h1>
-                <p>Java Backend Developer</p>
+                <p id="user-detail-intro">Java Backend Developer</p>
             </div>
         </div>
     </section>
 
     <!-- About Section -->
-    <section id="user-detail-intro" class="about section">
+    <section id="about" class="about section">
         <div class="container">
             <div class="about-content">
                 <h2 class="section-title">About</h2>
@@ -198,7 +198,7 @@
 
     <div>
         <div class="container">
-            <a class="react-activity-calendar" href="https://github.com/abhipathak1/github-readme-stats">
+            <a  class="react-activity-calendar" href="https://github.com/abhipathak1/github-readme-stats">
                 <img id="github-stats-card" src="https://github-readme-stats.vercel.app/api?username=abhipathak1"
                     alt="GitHub Stats Card" />
             </a>
