--- a/index.html
+++ b/index.html
@@ -49,6 +49,12 @@
                     deadline-oriented professional committed to delivering
                     high-quality software solutions.</p>
             </div>
+
+            <div class="resume-buttons">
+                <a class="resume-button" id="resume-button-2"
+                    href="https://drive.google.com/uc?export=download&id=1L1wzxDdw63ikYNVvlOrrOWnI-Hbm_NXD">Download
+                    Resume</a>
+            </div>
         </div>
     </section>
 
@@ -159,8 +165,17 @@
     </section>
 
 
-   
-   
+     <!-- <section id="resume">
+        <div class="container">
+            <h2 class="section-title">Resume</h2>
+            <div class="resume-buttons">
+                <a class="resume-button" id="resume-button-1"
+                    href="https://drive.google.com/uc?export=download&id=1L1wzxDdw63ikYNVvlOrrOWnI-Hbm_NXD">Download
+                    Resume</a>
+            </div>
+        </div>
+    </section> -->
+    
 
 
 
