--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     </section>
 
     <!-- About Section -->
-    <section id="about" class="about section">
+    <section id="user-detail-intro" class="about section">
         <div class="container">
             <div class="about-content">
                 <h2 class="section-title">About</h2>
@@ -165,16 +165,7 @@
     </section>
 
 
-     <!-- <section id="resume">
-        <div class="container">
-            <h2 class="section-title">Resume</h2>
-            <div class="resume-buttons">
-                <a class="resume-button" id="resume-button-1"
-                    href="https://drive.google.com/uc?export=download&id=1L1wzxDdw63ikYNVvlOrrOWnI-Hbm_NXD">Download
-                    Resume</a>
-            </div>
-        </div>
-    </section> -->
+    
     
 
 
