--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     </section>
 
     <!-- About Section -->
-    <section id="user-detail-intro" class="about section">
+    <section id="about" class="about section">
         <div class="container">
             <div class="about-content">
                 <h2 class="section-title">About</h2>
@@ -201,15 +201,6 @@
             </a>
         </div>
     </div>
-
-
-
-
-
-
-
-
-
 
     <!-- JavaScript -->
     <script src="index.js"></script>
