--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         <div class="container">
             <div class="about-content">
                 <h2 class="section-title">About</h2>
-                <p class="about-description">Java backend developer with expertise in building full-stack
+                <p class="about-description" id="user-detail-intro">Java backend developer with expertise in building full-stack
                     projects, utilizing Java, Spring Boot, Hibernate, and restful
                     APIs. Strong problem solving skills, attention to detail, and a
                     proactive team player. Effective communicator and
@@ -201,6 +201,15 @@
             </a>
         </div>
     </div>
+
+
+
+
+
+
+
+
+
 
     <!-- JavaScript -->
     <script src="index.js"></script>
