--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             <div class="profile">
                 <img src="WhatsApp Image 2023-04-04 at 16.10.25.jpg" alt="Professional Photo" class="home-img">
                 <h1 id="user-detail-name">Abhay Pathak</h1>
-                <p id="user-detail-intro">Java Backend Developer</p>
+                <p>Java Backend Developer</p>
             </div>
         </div>
     </section>
