--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             <div class="profile">
                 <img src="WhatsApp Image 2023-04-04 at 16.10.25.jpg" alt="Professional Photo" class="home-img">
                 <h1 id="user-detail-name">Abhay Pathak</h1>
-                <p>Java Backend Developer</p>
+                <p id="user-detail-intro">Java Backend </p>
             </div>
         </div>
     </section>
@@ -42,7 +42,7 @@
         <div class="container">
             <div class="about-content">
                 <h2 class="section-title">About</h2>
-                <p class="about-description" id="user-detail-intro">Java backend developer with expertise in building full-stack
+                <p class="about-description" >Java backend developer with expertise in building full-stack
                     projects, utilizing Java, Spring Boot, Hibernate, and restful
                     APIs. Strong problem solving skills, attention to detail, and a
                     proactive team player. Effective communicator and
