--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         <div class="container">
             <div class="about-content">
                 <h2 class="section-title">About</h2>
-                <p class="about-description" >Java backend developer with expertise in building full-stack
+                <p class="about-description">Java backend developer with expertise in building full-stack
                     projects, utilizing Java, Spring Boot, Hibernate, and restful
                     APIs. Strong problem solving skills, attention to detail, and a
                     proactive team player. Effective communicator and
@@ -59,7 +59,7 @@
     </section>
 
     <!-- Skills Section -->
-    <section id="skills">
+    <!-- <section id="skills">
         <div class="container">
             <div class="section-heading">
                 <h2 class="section-title">Skills</h2>
@@ -79,7 +79,89 @@
                 </div>
             </div>
         </div>
-    </section>
+    </section> -->
+
+
+
+
+    <div class="box22">
+
+        <div class="tool" class="skills-card" style="--i:1;">
+            <div>
+                <img class="skills-card-img" src="Skills_Logo/java_logo.png" alt="">
+            </div>
+            <div class="skills-card-name">
+                JAVA
+            </div>
+        </div>
+
+        <div class="tool" class="skills-card" style="--i:2;">
+            <div>
+                <img class="skills-card-img" src="Skills_Logo/spring_logo.png" alt="">
+            </div>
+            <div class="skills-card-name">
+                Spring Boot
+            </div>
+        </div>
+
+        <div class="tool" class="skills-card" style="--i:3;">
+            <div>
+                <img class="skills-card-img" src="https://www.vectorlogo.zone/logos/mysql/mysql-official.svg" alt="">
+            </div>
+            <div class="skills-card-name">
+                MySQL
+            </div>
+        </div>
+
+        <div class="tool" class="skills-card" style="--i:4;">
+            <div>
+                <img class="skills-card-img" src="Skills_Logo/hibernate_logo.png" alt="">
+            </div>
+            <div class="skills-card-name">
+                Hibernate
+            </div>
+        </div>
+
+        <div class="tool" class="skills-card" style="--i:5;">
+            <div>
+                <img class="skills-card-img" src="Skills_Logo/Git_logo.png" alt="">
+            </div>
+            <div class="skills-card-name">
+                Git
+            </div>
+        </div>
+
+        <div class="tool" class="skills-card" style="--i:6;">
+            <div>
+                <img class="skills-card-img" src="Skills_Logo/html_logo.png" alt="">
+            </div>
+            <div class="skills-card-name">
+                HTML
+            </div>
+
+        </div>
+
+        <div class="tool" class="skills-card" style="--i:7;">
+            <div>
+                <img class="skills-card-img" src="Skills_Logo/css_logo.webp" alt="">
+            </div>
+            <div class="skills-card-name">
+                CSS
+            </div>
+        </div>
+
+        <div class="tool" class="skills-card" style="--i:8;">
+            <div>
+                <img class="skills-card-img" src="Skills_Logo/js_logo2.jpg" alt="">
+            </div>
+            <div class="skills-card-name">
+                JavaScript
+            </div>
+        </div>
+    </div>
+
+
+
 
     <!-- Projects Section -->
     <section id="projects">
@@ -165,8 +247,8 @@
     </section>
 
 
-    
-    
+
+
 
 
 
@@ -195,7 +277,7 @@
 
     <div>
         <div class="container">
-            <a  class="react-activity-calendar" href="https://github.com/abhipathak1/github-readme-stats">
+            <a class="react-activity-calendar" href="https://github.com/abhipathak1/github-readme-stats">
                 <img id="github-stats-card" src="https://github-readme-stats.vercel.app/api?username=abhipathak1"
                     alt="GitHub Stats Card" />
             </a>
