--- a/index.html
+++ b/index.html
@@ -83,82 +83,87 @@
 
 
 
+    <section id="skills">
+        <div class="box22">
 
-    <div class="box22">
-
-        <div class="tool" class="skills-card" style="--i:1;">
-            <div>
-                <img class="skills-card-img" src="Skills_Logo/java_logo.png" alt="">
+            <div class="tool" class="skills-card" style="--i:1;">
+                <div>
+                    <img class="skills-card-img" src="Skills_Logo/java_logo.png" alt="">
+                </div>
+                <div class="skills-card-name">
+                    JAVA
+                </div>
             </div>
-            <div class="skills-card-name">
-                JAVA
+
+            <div class="tool" class="skills-card" style="--i:2;">
+                <div>
+                    <img class="skills-card-img" src="Skills_Logo/spring_logo.png" alt="">
+                </div>
+                <div class="skills-card-name">
+                    Spring Boot
+                </div>
+            </div>
+
+            <div class="tool" class="skills-card" style="--i:3;">
+                <div>
+                    <img class="skills-card-img" src="https://www.vectorlogo.zone/logos/mysql/mysql-official.svg"
+                        alt="">
+                </div>
+                <div class="skills-card-name">
+                    MySQL
+                </div>
+            </div>
+
+            <div class="tool" class="skills-card" style="--i:4;">
+                <div>
+                    <img class="skills-card-img" src="Skills_Logo/hibernate_logo.png" alt="">
+                </div>
+                <div class="skills-card-name">
+                    Hibernate
+                </div>
+            </div>
+
+            <div class="tool" class="skills-card" style="--i:5;">
+                <div>
+                    <img class="skills-card-img" src="Skills_Logo/Git_logo.png" alt="">
+                </div>
+                <div class="skills-card-name">
+                    Git
+                </div>
+            </div>
+
+            <div class="tool" class="skills-card" style="--i:6;">
+                <div>
+                    <img class="skills-card-img" src="Skills_Logo/html_logo.png" alt="">
+                </div>
+                <div class="skills-card-name">
+                    HTML
+                </div>
+
+            </div>
+
+            <div class="tool" class="skills-card" style="--i:7;">
+                <div>
+                    <img class="skills-card-img" src="Skills_Logo/css_logo.webp" alt="">
+                </div>
+                <div class="skills-card-name">
+                    CSS
+                </div>
+            </div>
+
+            <div class="tool" class="skills-card" style="--i:8;">
+                <div>
+                    <img class="skills-card-img" src="Skills_Logo/js_logo2.jpg" alt="">
+                </div>
+                <div class="skills-card-name">
+                    JavaScript
+                </div>
             </div>
         </div>
 
-        <div class="tool" class="skills-card" style="--i:2;">
-            <div>
-                <img class="skills-card-img" src="Skills_Logo/spring_logo.png" alt="">
-            </div>
-            <div class="skills-card-name">
-                Spring Boot
-            </div>
-        </div>
+    </section>
 
-        <div class="tool" class="skills-card" style="--i:3;">
-            <div>
-                <img class="skills-card-img" src="https://www.vectorlogo.zone/logos/mysql/mysql-official.svg" alt="">
-            </div>
-            <div class="skills-card-name">
-                MySQL
-            </div>
-        </div>
 
-        <div class="tool" class="skills-card" style="--i:4;">
-            <div>
-                <img class="skills-card-img" src="Skills_Logo/hibernate_logo.png" alt="">
-            </div>
-            <div class="skills-card-name">
-                Hibernate
-            </div>
-        </div>
-
-        <div class="tool" class="skills-card" style="--i:5;">
-            <div>
-                <img class="skills-card-img" src="Skills_Logo/Git_logo.png" alt="">
-            </div>
-            <div class="skills-card-name">
-                Git
-            </div>
-        </div>
-
-        <div class="tool" class="skills-card" style="--i:6;">
-            <div>
-                <img class="skills-card-img" src="Skills_Logo/html_logo.png" alt="">
-            </div>
-            <div class="skills-card-name">
-                HTML
-            </div>
-
-        </div>
-
-        <div class="tool" class="skills-card" style="--i:7;">
-            <div>
-                <img class="skills-card-img" src="Skills_Logo/css_logo.webp" alt="">
-            </div>
-            <div class="skills-card-name">
-                CSS
-            </div>
-        </div>
-
-        <div class="tool" class="skills-card" style="--i:8;">
-            <div>
-                <img class="skills-card-img" src="Skills_Logo/js_logo2.jpg" alt="">
-            </div>
-            <div class="skills-card-name">
-                JavaScript
-            </div>
-        </div>
-    </div>
 
 
 
