--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
     <section id="skills">
         <div class="box22">
 
-            <div class="tool" class="skills-card" style="--i:1;">
+            <div  class="skills-card" style="--i:1;">
                 <div>
                     <img class="skills-card-img" src="Skills_Logo/java_logo.png" alt="">
                 </div>
@@ -95,7 +95,7 @@
                 </div>
             </div>
 
-            <div class="tool" class="skills-card" style="--i:2;">
+            <div  class="skills-card" style="--i:2;">
                 <div>
                     <img class="skills-card-img" src="Skills_Logo/spring_logo.png" alt="">
                 </div>
@@ -104,7 +104,7 @@
                 </div>
             </div>
 
-            <div class="tool" class="skills-card" style="--i:3;">
+            <div  class="skills-card" style="--i:3;">
                 <div>
                     <img class="skills-card-img" src="https://www.vectorlogo.zone/logos/mysql/mysql-official.svg"
                         alt="">
@@ -114,7 +114,7 @@
                 </div>
             </div>
 
-            <div class="tool" class="skills-card" style="--i:4;">
+            <div  class="skills-card" style="--i:4;">
                 <div>
                     <img class="skills-card-img" src="Skills_Logo/hibernate_logo.png" alt="">
                 </div>
@@ -123,7 +123,7 @@
                 </div>
             </div>
 
-            <div class="tool" class="skills-card" style="--i:5;">
+            <div  class="skills-card" style="--i:5;">
                 <div>
                     <img class="skills-card-img" src="Skills_Logo/Git_logo.png" alt="">
                 </div>
@@ -132,7 +132,7 @@
                 </div>
             </div>
 
-            <div class="tool" class="skills-card" style="--i:6;">
+            <div  class="skills-card" style="--i:6;">
                 <div>
                     <img class="skills-card-img" src="Skills_Logo/html_logo.png" alt="">
                 </div>
@@ -142,7 +142,7 @@
 
             </div>
 
-            <div class="tool" class="skills-card" style="--i:7;">
+            <div  class="skills-card" style="--i:7;">
                 <div>
                     <img class="skills-card-img" src="Skills_Logo/css_logo.webp" alt="">
                 </div>
@@ -151,7 +151,7 @@
                 </div>
             </div>
 
-            <div class="tool" class="skills-card" style="--i:8;">
+            <div  class="skills-card" style="--i:8;">
                 <div>
                     <img class="skills-card-img" src="Skills_Logo/js_logo2.jpg" alt="">
                 </div>
