--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             <div class="profile">
                 <img src="WhatsApp Image 2023-04-04 at 16.10.25.jpg" alt="Professional Photo" class="home-img">
                 <h1 id="user-detail-name">Abhay Pathak</h1>
-                <p id="user-detail-intro">Java Backend </p>
+                <p >Java Backend </p>
             </div>
         </div>
     </section>
@@ -42,8 +42,8 @@
         <div class="container">
             <div class="about-content">
                 <h2 class="section-title">About</h2>
-                <p class="about-description">Java backend developer with expertise in building full-stack
-                    projects, utilizing Java, Spring Boot, Hibernate, and restful
+                <p class="about-description" id="user-detail-intro">Java backend developer with expertise in building full-stack
+                    projects, utilizing HTML, CSS, JavaScript, Java, Spring Boot, Hibernate, and restful
                     APIs. Strong problem solving skills, attention to detail, and a
                     proactive team player. Effective communicator and
                     deadline-oriented professional committed to delivering
@@ -251,14 +251,6 @@
         </div>
     </section>
 
-
-
-
-
-
-
-
-
     <div>
         <div class="container">
             <a class="react-activity-calendar" href="https://git.io/streak-stats">
@@ -288,15 +280,6 @@
             </a>
         </div>
     </div>
-
-
-
-
-
-
-
-
-
 
     <!-- JavaScript -->
     <script src="index.js"></script>
