--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                         </ul>
                     </div>
                     <div id="mypic">
-                        <img src="Profile_Pic.jpg" alt="" class="home-img">
+                        <img src="images/Profile_Pic.jpg" alt="" class="home-img">
                     </div>
                 </div>
             </div>
@@ -224,30 +224,30 @@
 
         <section class="Project">
             <div class="project-card">
-                <figure class="swing"><img class="proimg" src="TravTok.png" alt=""></figure>
+                <figure class="swing"><img class="proimg" src="images/TravTok.png" alt=""></figure>
                 <h1>TravTok</h1>
                 <h2>A website inspired by the Dribble Template, serving as a traveler's guide for exploring "Things to
                     do in Seoul."</h2>
                 <h1>Tech-Stacks</h1>
                 <h2>Html | Css | Javascript</h2>
                 <div class="deployed-links">
-                    <a href="https://github.com/AK016/burly-argument-2312" class="project-github-link"><i
+                    <a href="https://github.com/abhipathak1/sharp-lumber-1926" class="project-github-link"><i
                             class="fa-brands fa-github" style="color: #6abde7;"></i></a>
-                    <a href="#" class="project-deployed-link"><i class="fa-duotone fa-eye"
+                    <a href="https://travtok.netlify.app/" class="project-deployed-link"><i class="fa-duotone fa-eye"
                             style="--fa-primary-color: #dc3c50; --fa-secondary-color: #000000;"></i></a>
                 </div>
             </div>
             <div class="project-card">
-                <figure class="swing"><img class="proimg" src="Hoshiyaarr.png" alt=""></figure>
+                <figure class="swing"><img class="proimg" src="images/Hoshiyaarr.png" alt=""></figure>
                 <h1>Hoshiyaar</h1>
                 <h2>Developed Hoshiyaar, an e-commerce website inspired by Bewakoof, catering to clothing, appliances,
                     and gadgets.</h2>
                 <h1>Tech-Stacks</h1>
                 <h2>Html | Css | Javascript</h2>
                 <div class="deployed-links">
-                    <a href="https://github.com/AK016/burly-argument-2312" class="project-github-link"><i
+                    <a href="https://github.com/abhipathak1/HoshiYaar" class="project-github-link"><i
                             class="fa-brands fa-github" style="color: #6abde7;"></i></a>
-                    <a href="#" class="project-deployed-link"><i class="fa-duotone fa-eye"
+                    <a href="https://hoshiyaar.netlify.app/" class="project-deployed-link"><i class="fa-duotone fa-eye"
                             style="--fa-primary-color: #dc3c50; --fa-secondary-color: #000000;"></i></a>
                 </div>
             </div>
@@ -261,7 +261,7 @@
 
         <section class="Project">
             <div class="project-card">
-                <figure class="swing"><img class="proimg" src="OnAnOn.jpg" alt=""></figure>
+                <figure class="swing"><img class="proimg" src="images/OnAnOn.jpg" alt=""></figure>
                 <h1>OnAnOn</h1>
                 <h2>OnAnOn is a simple ride-hailing application built using Java. It
                     allows passengers to book rides and drivers to manage their
@@ -269,14 +269,14 @@
                 <h1>Tech-Stacks</h1>
                 <h2>JAVA | Spring Tool Suite</h2>
                 <div class="deployed-links">
-                    <a href="https://github.com/AK016/burly-argument-2312" class="project-github-link"><i
+                    <a href="https://github.com/abhipathak1/guarded-boat-4126" class="project-github-link"><i
                             class="fa-brands fa-github" style="color: #6abde7;"></i></a>
-                    <a href="#" class="project-deployed-link"><i class="fa-duotone fa-eye"
-                            style="--fa-primary-color: #dc3c50; --fa-secondary-color: #000000;"></i></a>
+                    <a href="https://drive.google.com/file/d/1uevf2dUMyyrpf5PYMhbyqwBvfnb_m0Ek/view?usp=sharing" class="project-deployed-link"><i class="fa-solid fa-circle-play"
+                            style="color: black;"></i></a>
                 </div>
             </div>
             <div class="project-card">
-                <figure class="swing"><img class="proimg" src="OnAnOn.jpg" alt=""></figure>
+                <figure class="swing"><img class="proimg" src="images/OnAnOn.jpg" alt=""></figure>
                 <h1>OnAnOn</h1>
                 <h2>OnAnOn is a simple ride-hailing application built using Java. It
                     allows passengers to book rides and drivers to manage their
@@ -284,10 +284,10 @@
                 <h1>Tech-Stacks</h1>
                 <h2>JAVA | Spring Tool Suite</h2>
                 <div class="deployed-links">
-                    <a href="https://github.com/AK016/burly-argument-2312" class="project-github-link"><i
+                    <a href="https://github.com/abhipathak1/guarded-boat-4126" class="project-github-link"><i
                             class="fa-brands fa-github" style="color: #6abde7;"></i></a>
-                    <a href="#" class="project-deployed-link"><i class="fa-duotone fa-eye"
-                            style="--fa-primary-color: #dc3c50; --fa-secondary-color: #000000;"></i></a>
+                    <a href="https://drive.google.com/file/d/1uevf2dUMyyrpf5PYMhbyqwBvfnb_m0Ek/view?usp=sharing" class="project-deployed-link"><i class="fa-solid fa-circle-play"
+                            style="color: black;"></i></a>
                 </div>
             </div>
         </section>
