--- a/index.html
+++ b/index.html
@@ -231,9 +231,9 @@
                 <h1>Tech-Stacks</h1>
                 <h2>Html | Css | Javascript</h2>
                 <div class="deployed-links">
-                    <a href="https://github.com/abhipathak1/sharp-lumber-1926" class="project-github-link"><i
+                    <a href="https://github.com/abhipathak1/sharp-lumber-1926" class="project-github-link" title="Github"><i
                             class="fa-brands fa-github" style="color: #6abde7;"></i></a>
-                    <a href="https://travtok.netlify.app/" class="project-deployed-link"><i class="fa-duotone fa-eye"
+                    <a href="https://travtok.netlify.app/" class="project-deployed-link" title="Netlify"><i class="fa-duotone fa-eye"
                             style="--fa-primary-color: #dc3c50; --fa-secondary-color: #000000;"></i></a>
                 </div>
             </div>
@@ -245,9 +245,9 @@
                 <h1>Tech-Stacks</h1>
                 <h2>Html | Css | Javascript</h2>
                 <div class="deployed-links">
-                    <a href="https://github.com/abhipathak1/HoshiYaar" class="project-github-link"><i
+                    <a href="https://github.com/abhipathak1/HoshiYaar" class="project-github-link" title="Github"><i
                             class="fa-brands fa-github" style="color: #6abde7;"></i></a>
-                    <a href="https://hoshiyaar.netlify.app/" class="project-deployed-link"><i class="fa-duotone fa-eye"
+                    <a href="https://hoshiyaar.netlify.app/" class="project-deployed-link" title="Netlify"><i class="fa-duotone fa-eye"
                             style="--fa-primary-color: #dc3c50; --fa-secondary-color: #000000;"></i></a>
                 </div>
             </div>
@@ -269,9 +269,10 @@
                 <h1>Tech-Stacks</h1>
                 <h2>JAVA | Spring Tool Suite</h2>
                 <div class="deployed-links">
-                    <a href="https://github.com/abhipathak1/guarded-boat-4126" class="project-github-link"><i
-                            class="fa-brands fa-github" style="color: #6abde7;"></i></a>
-                    <a href="https://drive.google.com/file/d/1uevf2dUMyyrpf5PYMhbyqwBvfnb_m0Ek/view?usp=sharing" class="project-deployed-link"><i class="fa-solid fa-circle-play"
+                    <a href="https://github.com/abhipathak1/guarded-boat-4126" class="project-github-link"
+                        title="Github"><i class="fa-brands fa-github" style="color: #6abde7;"></i></a>
+                    <a href="https://drive.google.com/file/d/1uevf2dUMyyrpf5PYMhbyqwBvfnb_m0Ek/view?usp=sharing"
+                        class="project-deployed-link" title="Presentation"><i class="fa-solid fa-circle-play"
                             style="color: black;"></i></a>
                 </div>
             </div>
@@ -284,9 +285,10 @@
                 <h1>Tech-Stacks</h1>
                 <h2>JAVA | Spring Tool Suite</h2>
                 <div class="deployed-links">
-                    <a href="https://github.com/abhipathak1/guarded-boat-4126" class="project-github-link"><i
-                            class="fa-brands fa-github" style="color: #6abde7;"></i></a>
-                    <a href="https://drive.google.com/file/d/1uevf2dUMyyrpf5PYMhbyqwBvfnb_m0Ek/view?usp=sharing" class="project-deployed-link"><i class="fa-solid fa-circle-play"
+                    <a href="https://github.com/abhipathak1/guarded-boat-4126" class="project-github-link"
+                        title="Github"><i class="fa-brands fa-github" style="color: #6abde7;"></i></a>
+                    <a href="https://drive.google.com/file/d/1uevf2dUMyyrpf5PYMhbyqwBvfnb_m0Ek/view?usp=sharing"
+                        class="project-deployed-link" title="Presentation"><i class="fa-solid fa-circle-play"
                             style="color: black;"></i></a>
                 </div>
             </div>
