--- a/index.html
+++ b/index.html
@@ -320,7 +320,7 @@
             <div>
                 <a class="react-activity-calendar" href="https://git.io/streak-stats">
                     <img id="github-streak-stats"
-                        src="https://github-readme-streak-stats.herokuapp.com/?user=abhipathak1&theme=highcontrast&border_radius=5"
+                        src="https://github-readme-streak-stats.herokuapp.com/?user=abhipathak1&border_radius=5"
                         alt="GitHub Streak Stats" />
                 </a>
             </div>
@@ -331,7 +331,7 @@
                         alt="GitHub Stats Card" />
                 </a>
             </div>
-
+            
             <div>
                 <a class="react-activity-calendar" href="https://github.com/abhipathak1/github-readme-stats">
                     <img id="github-top-langs"
