--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="index.css">
-    <title>Portfolio</title>
+    <title>Abhay Pathak | Portfolio</title>
+    <link rel="shortcut icon" href="https://cdn.discordapp.com/attachments/758572508911501315/1128794635565805729/ap-letter-logo-design_579179-1040-removebg-preview.png" type="jpeg/png">
 </head>
 
 <body>
@@ -20,7 +21,7 @@
             <li><a href="#home" class="nav-link home">Home</a></li>
             <li><a href="#about" class="nav-link about">About</a></li>
             <li><a href="#skills" class="nav-link skills">Skills</a></li>
-            <li><a href="#projects" class="nav-link projects">Projects</a></li>
+            <li><a href="#pp" class="nav-link projects">Projects</a></li>
             <li><a href="#contact" class="nav-link contact">Contact</a></li>
             <li><a class="nav-link resume"
                     href="https://drive.google.com/uc?export=download&id=1L1wzxDdw63ikYNVvlOrrOWnI-Hbm_NXD"
@@ -36,12 +37,10 @@
                 <div class="home-text">
                     <div>
                         <p style="font-size: 26px;line-height: 1px;font-weight: 600;">Hi, I'm</p>
-                        <p style="font-size: 40px;line-height: 1px;font-weight: 600;" id="user-detail-name">ABHAY PATHAK
+                        <p id="user-detail-name">ABHAY PATHAK
                         </p>
                         <p id="user-detail-intro"></p>
                         <ul id="socials">
-                            <!-- <li><a href=""><i class="fa-solid fa-envelope fa-bounce" style="color: #ff7300;"></i></a>
-                            </li> -->
                             <li><a href=""><i class="fa-brands fa-whatsapp" style="color: #ff7300;"></i></a>
                             </li>
                             <li><a href=""><i class="fa-brands fa-linkedin fa-bounce" style="color: #ff7300;"></i></a>
@@ -208,14 +207,16 @@
 
     <!-- Projects Section -->
 
-
-    <div id="Project-tittle">
-        <div class="forLine">
-            <h2 class="section-title">Projects</h2>
-            <hr class="Project-line">
-            <hr class="first-line">
+    <section id="pp">
+        <div id="Project-tittle">
+            <div class="forLine">
+                <h2 class="section-title">Projects</h2>
+                <hr class="Project-line">
+                <hr class="first-line">
+            </div>
         </div>
-    </div>
+    </section>
+
 
     <div>
         <div class="Project">
@@ -231,9 +232,10 @@
                 <h1>Tech-Stacks</h1>
                 <h2>Html | Css | Javascript</h2>
                 <div class="deployed-links">
-                    <a href="https://github.com/abhipathak1/sharp-lumber-1926" class="project-github-link" title="Github"><i
-                            class="fa-brands fa-github" style="color: #6abde7;"></i></a>
-                    <a href="https://travtok.netlify.app/" class="project-deployed-link" title="Netlify"><i class="fa-duotone fa-eye"
+                    <a href="https://github.com/abhipathak1/sharp-lumber-1926" class="project-github-link"
+                        title="Github"><i class="fa-brands fa-github" style="color: #6abde7;"></i></a>
+                    <a href="https://travtok.netlify.app/" class="project-deployed-link" title="Netlify"><i
+                            class="fa-duotone fa-eye"
                             style="--fa-primary-color: #dc3c50; --fa-secondary-color: #000000;"></i></a>
                 </div>
             </div>
@@ -247,7 +249,8 @@
                 <div class="deployed-links">
                     <a href="https://github.com/abhipathak1/HoshiYaar" class="project-github-link" title="Github"><i
                             class="fa-brands fa-github" style="color: #6abde7;"></i></a>
-                    <a href="https://hoshiyaar.netlify.app/" class="project-deployed-link" title="Netlify"><i class="fa-duotone fa-eye"
+                    <a href="https://hoshiyaar.netlify.app/" class="project-deployed-link" title="Netlify"><i
+                            class="fa-duotone fa-eye"
                             style="--fa-primary-color: #dc3c50; --fa-secondary-color: #000000;"></i></a>
                 </div>
             </div>
@@ -331,7 +334,7 @@
                         alt="GitHub Stats Card" />
                 </a>
             </div>
-            
+
             <div>
                 <a class="react-activity-calendar" href="https://github.com/abhipathak1/github-readme-stats">
                     <img id="github-top-langs"
